--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"devalue": "^2.0.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"devalue": "^2.0.1",
 		"flexsearch": "^0.7.21",
 		"marked": "^4.0.12",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"prismjs": "^1.26.0",
+		"sass": "^1.49.9",
 		"shiki-twoslash": "^3.0.2",
-		"svelte": "^3.46.0"
+		"svelte": "^3.46.0",
+		"svelte-preprocess": "^4.10.4"
 	},
 	"type": "module",
 	"dependencies": {
