--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.47",
 		"@sveltejs/kit": "next",
 		"devalue": "^2.0.1",
 		"eslint": "^7.32.0",
