feat: setup github pages workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .DS_Store
 node_modules
-/build
 /.svelte-kit
 /package
 .env
 .env.*
 !.env.example
+
+# svelte build files
+/build
 .vercel
 .vercel_build_output
 .output
-
-temp/
