--- a/.github/workflows/BuildDeploy.yml
+++ b/.github/workflows/BuildDeploy.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: 
+      name: production
+      url: https://portalspeedruns.com
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
