--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.29",
+		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
 		"devalue": "^2.0.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^3.4.1",
 		"flexsearch": "^0.7.21",
-		"marked": "^4.0.15",
+		"marked": "^4.0.16",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"prismjs": "^1.28.0",
-		"sass": "^1.51.0",
+		"sass": "^1.52.1",
 		"shiki-twoslash": "^3.0.2",
 		"svelte": "^3.48.0",
 		"svelte-preprocess": "^4.10.6"
@@ -32,6 +31,6 @@
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.8",
 		"@fontsource/montserrat": "^4.5.10",
-		"@fontsource/open-sans": "^4.5.8"
+		"@fontsource/open-sans": "^4.5.10"
 	}
 }
